cluster/apps/media/plex/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app plex
  namespace: media
spec:
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      volumes:
        - name: gdrive
          hostPath:
            path: &path /mnt/rclone
            type: DirectoryOrCreate
        - name: plex-config2
          persistentVolumeClaim:
            claimName: plex-config2
        - name: rclone-cache
          persistentVolumeClaim:
            claimName: rclone-cache
      terminationGracePeriodSeconds: 180
      containers:
        - name: rclone
          image: rclone/rclone:1.74
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          args:
            [
              "mount",
              "-v",
              "--allow-other",
              "--allow-non-empty",
              "--read-only",
              "--dir-cache-time",
              "96h",
              "--vfs-cache-max-size",
              "500G",
              "--vfs-read-chunk-size",
              "64M",
              "--vfs-read-chunk-size-limit",
              "1G",
              "--vfs-read-ahead",
              "2G",
              "--vfs-cache-poll-interval",
              "5m",
              "--vfs-cache-mode",
              "full",
              "--drive-pacer-min-sleep",
              "10ms",
              "--drive-pacer-burst",
              "200",
              "--vfs-cache-max-age",
              "5000h",
              "--cache-dir",
              "/data/cache",
              "--bwlimit-file",
              "32M",
              "--poll-interval",
              "10s",
              "--config",
              "/data/config/rclone.conf",
              "gcrypt:",
              *path,
            ]
          lifecycle:
            preStop:
              exec:
                command:
                  ["/bin/sh", "-c", "fusermount -uz /mnt/rclone"]
          # resources:
          #   limits:
          #     memory: "2Gi"
          #     cpu: "1000m"
          volumeMounts:
            - name: gdrive
              mountPath: *path
              mountPropagation: Bidirectional
            - name: rclone-cache
              mountPath: /data
        - name: *app
          image: plexinc/pms-docker:1.30.0.6486-629d58034
          # resources:
          #   limits:
          #     memory: "2Gi"
          #     cpu: "1000m"
          ports:
            - containerPort: 32400
              name: http
            - containerPort: 3005
            - containerPort: 8324
              name: roku
            - containerPort: 32469
              name: dlna-tcp
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
            - containerPort: 32410
              name: gdm1
              protocol: UDP
            - containerPort: 32412
              name: gdm2
              protocol: UDP
            - containerPort: 32413
              name: gdm3
              protocol: UDP
            - containerPort: 32414
              name: gdm4
              protocol: UDP
          volumeMounts:
            - name: gdrive
              mountPath: *path
              mountPropagation: HostToContainer
            - name: plex-config2
              mountPath: /config
