cluster/apps/media/plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  labels:
    name: plex
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: "plex.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: plex
                port:
                  number: 32400
